# beavr-bench-dreamsat

./: .dockerignore  .gitignore  .gitmodules  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: SCENES.md
src/beavr_bench/: __init__.py  registry.py  schemas.py  sim.py
src/beavr_bench/assets/scenes/: scene_dreamsat.json  scene_dreamsat.xml  scene_hello_world.json  scene_hello_world.xml  scene_pickplace.json  scene_pickplace.xml  scene_serverswap.json  scene_serverswap.xml  scene_shell_game.json  scene_shell_game.xml  scene_vanishing_blueprint.json  scene_vanishing_blueprint.xml  test_mesh.json  test_mesh.xml
src/beavr_bench/engine/: physics_loop.py
src/beavr_bench/envs/: tasks.py
src/beavr_bench/envs/rules/: __init__.py  base.py  reach.py  server_swap.py  shell_game.py  vanishing_blueprint.py
src/beavr_bench/scripts/: eval.py  preview_scene.py  train.py  upload_eval.py
tests/: conftest.py  test_scenes.py  test_seed.py
tests/test_envs/: test_tasks.py
tests/test_rules/: test_reach.py  test_server_swap.py  test_shell_game.py  test_vanishing_blueprint.py
